--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
 <body>
     <section class="top">
         <header class="header">
-            <a href="index.html"><img src="img\" alt=""></a>
+            <a href="index.html"><img src="img/Logo_Logitech_dark 1.svg" alt="logo"></a>
         </header>
+        <div class="top__img">
+            <h2 class="heading">РАБОТАЙТЕ ПРОДУКТИВНЕЕ</h2>
+        </div>
+        <p class="text">Создана для эффективной работы, программирования и творчества</p>
+        <svg width="42" height="22" viewBox="0 0 42 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 1L20.6552 21L40.3103 1" stroke="#FF2947" stroke-width="2" stroke-linejoin="round" />
+        </svg>
+
     </section>
     <section></section>
     <section></section>
